--- a/docker-compose.dockploy.yml
+++ b/docker-compose.dockploy.yml
@@ -12,7 +12,9 @@ services:
     networks:
       - palm-beach-cannes-network
       - dokploy-network
-    expose:
+    # expose:
+    #   - 1337
+    ports:
       - 1337
     depends_on:
       - palm-beach-cannes-db
