--- a/docker-compose.dockploy.yml
+++ b/docker-compose.dockploy.yml
@@ -16,6 +16,12 @@ services:
     #   - 1337
     ports:
       - 1337
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.next-app.rule=Host(`next-app.dokploy.com`)
+      - traefik.http.routers.next-app.entrypoints=websecure
+      - traefik.http.routers.next-app.tls.certResolver=letsencrypt
+      - traefik.http.services.next-app.loadbalancer.server.port=3000
     depends_on:
       - palm-beach-cannes-db
 
