--- a/docker-compose.dockploy.yml
+++ b/docker-compose.dockploy.yml
@@ -18,10 +18,10 @@ services:
       - 1337
     labels:
       - traefik.enable=true
-      - traefik.http.routers.next-app.rule=Host(`next-app.dokploy.com`)
-      - traefik.http.routers.next-app.entrypoints=websecure
-      - traefik.http.routers.next-app.tls.certResolver=letsencrypt
-      - traefik.http.services.next-app.loadbalancer.server.port=3000
+      - traefik.http.routers.strapi-docker.rule=Host(`strapi-docker.sombrerohosting.com`)
+      - traefik.http.routers.strapi-docker.entrypoints=websecure
+      - traefik.http.routers.strapi-docker.tls.certResolver=letsencrypt
+      - traefik.http.services.strapi-docker.loadbalancer.server.port=3000
     depends_on:
       - palm-beach-cannes-db
 
