--- a/docker-compose.dockploy.yml
+++ b/docker-compose.dockploy.yml
@@ -11,15 +11,9 @@ services:
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
     networks:
       - palm-beach-cannes-network
-      - dokploy-network
+      - proxy-net
     expose:
       - 1337
-    # labels:
-    #   - traefik.enable=true
-    #   - traefik.http.routers.strapi-docker.rule=Host(`strapi-docker.sombrerohosting.com`)
-    #   - traefik.http.routers.strapi-docker.entrypoints=websecure
-    #   - traefik.http.routers.strapi-docker.tls.certResolver=letsencrypt
-    #   - traefik.http.services.strapi-docker.loadbalancer.server.port=3000
     depends_on:
       - palm-beach-cannes-db
 
@@ -35,7 +29,7 @@ services:
       - palm-beach-cannes-data:/var/lib/postgresql/data/ #using a volume
     networks:
       - palm-beach-cannes-network
-      - dokploy-network
+      - db-admin-net
     expose:
       - 5432
 
@@ -46,5 +40,9 @@ volumes:
 networks:
   palm-beach-cannes-network:
     name: palm-beach-cannes-network
-  dokploy-network:
+  proxy-net:
     external: true
+    name: proxy-net
+  db-admin-net:
+    external: true
+    name: db-admin-net
