--- a/docker-compose.dockploy.yml
+++ b/docker-compose.dockploy.yml
@@ -11,8 +11,16 @@ services:
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
     networks:
       - palm-beach-cannes-network
+      - dokploy-network
+    expose:
+      - 1337
     depends_on:
       - palm-beach-cannes-db
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.frontend-app.rule=Host(`strapi-docker-sombrerohosting.com`)
+      - traefik.http.routers.frontend-app.entrypoints=web
+      - traefik.http.services.frontend-app.loadbalancer.server.port=1337
 
   palm-beach-cannes-db:
     image: postgres:14.0-alpine
@@ -26,6 +34,9 @@ services:
       - palm-beach-cannes-data:/var/lib/postgresql/data/ #using a volume
     networks:
       - palm-beach-cannes-network
+      - dokploy-network
+    expose:
+      - 5432
 
 volumes:
   palm-beach-cannes-data:
@@ -34,3 +45,5 @@ volumes:
 networks:
   palm-beach-cannes-network:
     name: palm-beach-cannes-network
+  dokploy-network:
+    external: true
