--- a/docker-compose.dokploy.yml
+++ b/docker-compose.dokploy.yml
@@ -12,8 +12,8 @@ services:
     networks:
       - palm-beach-cannes-network
       - dokploy-network
-    expose:
-      - 1337
+    ports:
+      - "1337"
     depends_on:
       - palm-beach-cannes-db
     labels:
